--- a/_site.yml
+++ b/_site.yml
@@ -8,7 +8,7 @@ navbar:
     - icon: fa-envelope fa-lg
       href: mailto:<sm5567@cumc.columbia.edu>
     - icon: fa-github fa-lg
-      href: http://github.com/shinamin0218/
+      href: http://github.com/<shinamin0218>/
 output:
   html_document:
     theme: yeti
